--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,8 +41,6 @@
     <string name="entrance_agreement_location">[필수] 위치기반 서비스 이용약관 동의</string>
     <string name="entrance_agreement_marketing">[선택] 마케팅 정보 활용 동의</string>
     <string name="my_page_badges">내 배지</string>
-    <string name="my_page_languages">학습 언어</string>
-    <string name="my_page_alarm">학습 알림</string>
     <string name="my_page_push">트레이닝 푸시알림</string>
     <string name="my_page_edit_done_message">변경 완료</string>
     <string name="diary_write_next">다음</string>
@@ -54,7 +52,6 @@
     <string name="diary_write_hint">일기를 작성해주세요 :)</string>
     <string name="diary_native_write_hint">완전한 문장으로 한국어 일기를 작성하면, 더욱 정확한 힌트를 받을 수 있어요.</string>
     <string name="diary_edit_done_message">수정 완료</string>
-    <string name="language_english">English</string>
     <string name="language_korean">한국어</string>
     <string name="dummy_diary_korean">오늘은 OPR을 공개한 날이었다. 안 떨릴 줄 알았는데 겁나 떨렸당. 사실 카페가 추웠어서 추워서 떠는 건지 긴장 돼서 떠는 건지 구분이 잘 안 갔다. 근데 사실 나는 다리 떠는 것도 습관이라 다리를 떨어서 몸이 떨린 걸 수도 있다. 오늘은 OPR을 공개한 날이었다. 안 떨릴 줄 알았는데 겁나 떨렸당. 사실 카페가 추웠어서 추워서 떠는 건지 긴장 돼서 떠는 건지 구분이 잘 안 갔다. 근데 사실 나는 다리 떠는 것도 습관이라 다리를 떨어서 몸이 떨린 걸 수도 있다.</string>
     <string name="my_page">My Page</string>
@@ -83,4 +80,8 @@
 
     <string name="smeem_card_edit">수정하기</string>
     <string name="change_nickname_card">닉네임 변경</string>
+    <string name="my_page_languages">학습 언어</string>
+    <string name="my_page_alarm">학습 알림</string>
+    <string name="language_english">English</string>
+    <string name="edit_target_language">edit target language</string>
 </resources>
