--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,6 @@
     <string name="entrance_agreement_location">[필수] 위치기반 서비스 이용약관 동의</string>
     <string name="entrance_agreement_marketing">[선택] 마케팅 정보 활용 동의</string>
     <string name="my_page_badges">내 배지</string>
-    <string name="my_page_push">트레이닝 푸시알림</string>
     <string name="my_page_edit_done_message">변경 완료</string>
     <string name="diary_write_next">다음</string>
     <string name="diary_write_done">완료</string>
@@ -81,10 +80,11 @@
     <string name="smeem_card_edit">수정하기</string>
     <string name="change_nickname_card">닉네임 변경</string>
     <string name="my_page_languages">학습 언어</string>
-    <string name="my_page_alarm">학습 알림</string>
+    <string name="my_page_study_alarm">학습 알림</string>
     <string name="language_english">English</string>
     <string name="edit_target_language">edit target language</string>
-    
+    <string name="my_page_training_push_alarm">트레이닝 푸시알림</string>
+
     <string name="my_page_change_nickname">닉네임 변경</string>
     <string name="my_page_change_nickname_button">완료</string>
 
