TrainingPlan Select Card Item 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
 
     <!-- Training Plan -->
     <string name="edit_training_plan_title">트레이닝 플랜 변경</string>
+    <string name="training_plan_selection_icon">selection icon</string>
 </resources>
