--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="no_plan_title">아직 플랜이 없어요!</string>
     <string name="no_plan_navigate_description">플랜 설정하러 가기</string>
     <string name="set_my_plan">플랜 설정하기</string>
+    <string name="notice_back_process">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
 </resources>
